--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EspanolGenerator.cs" />
     <Compile Include="LoadAllExampleTexts.cs" />
+    <Compile Include="DataLoader.cs" />
+    <Compile Include="Verb.cs" />
+    <Compile Include="PointOfView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
