now generating more elaborate phrases

--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PointOfView.cs" />
     <Compile Include="Commands\LoadAllExampleTexts.cs" />
     <Compile Include="Commands\LoadContexts.cs" />
+    <Compile Include="CannedData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
