--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -53,6 +53,9 @@
     <Reference Include="WebDriver.Support">
       <HintPath>..\packages\Selenium.Support.2.45.0\lib\net40\WebDriver.Support.dll</HintPath>
     </Reference>
+    <Reference Include="Polly">
+      <HintPath>..\packages\Polly.2.2.1\lib\net45\Polly.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
