--- a/monarquia/packages.config
+++ b/monarquia/packages.config
@@ -5,6 +5,7 @@
   <package id="ManyConsole" version="0.4.2.17" targetFramework="net45" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Polly" version="2.2.1" targetFramework="net45" />
   <package id="Selenium.Support" version="2.45.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.45.0" targetFramework="net45" />
 </packages>
