--- a/test/test.csproj
+++ b/test/test.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="CanGenerateSpanish.cs" />
     <Compile Include="CanLoadConjugationInformation.cs" />
+    <Compile Include="CsQueryTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
