--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Commands\DrillWithLinguee.cs" />
     <Compile Include="Spanish\CannedTranslation.cs" />
     <Compile Include="Spanish\ITranslateable.cs" />
+    <Compile Include="Commands\ScrapeDictionary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
