starting to separate subject nouns from PointOfView global thing

--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Commands\DownloadPhoneticForm.cs" />
     <Compile Include="CachedPhoneticData.cs" />
     <Compile Include="Spanish\Conjugation.cs" />
+    <Compile Include="Spanish\Pronouns.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
