--- a/test/test.csproj
+++ b/test/test.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ArticleAwareness.cs" />
     <Compile Include="VerbScenarioBuilderTest.cs" />
     <Compile Include="CannedDataTest.cs" />
+    <Compile Include="HintedLanguageAccumulatorTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
