--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Commands\DrillVerb.cs" />
     <Compile Include="Commands\GetTranslation.cs" />
     <Compile Include="Spanish\PointOfView.cs" />
-    <Compile Include="Spanish\Noun.cs" />
+    <Compile Include="Spanish\FollowsFrameMasculinityAndPlurality.cs" />
     <Compile Include="LingueeGenerator.cs" />
     <Compile Include="Commands\LingueeLookup.cs" />
     <Compile Include="Spanish\CannedTranslation.cs" />
