--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Commands\LoadContexts.cs" />
     <Compile Include="Commands\DrillVerb.cs" />
     <Compile Include="Commands\GetTranslation.cs" />
+    <Compile Include="RoleSelections.cs" />
+    <Compile Include="RoleSelection.cs" />
     <Compile Include="Spanish\Noun.cs" />
     <Compile Include="Spanish\PointOfView.cs" />
     <Compile Include="Spanish\FollowsFrameMasculinityAndPlurality.cs" />
