--- a/monarquia/monarquia.csproj
+++ b/monarquia/monarquia.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Commands\GetTranslation.cs" />
     <Compile Include="RoleSelections.cs" />
     <Compile Include="RoleSelection.cs" />
+    <Compile Include="Spanish\BelongingNoun.cs" />
     <Compile Include="Spanish\Noun.cs" />
     <Compile Include="Spanish\PointOfView.cs" />
     <Compile Include="Spanish\FollowsFrameMasculinityAndPlurality.cs" />
